--- a/style.css
+++ b/style.css
@@ -4,5 +4,10 @@ header, main{
     align-items: center;
 }
 button{
-    width: 80px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: rgb(4, 207, 4);
+    box-shadow: 0px 0px 3px 1px;
+    color: black;
 }
